Fixed vertical alignment to proper flexbox option and also used direct inline css to make setting easier

--- a/src/components/Shiny-Ui-Elements/Elements/GridlayoutGridPanel/styles.module.css
+++ b/src/components/Shiny-Ui-Elements/Elements/GridlayoutGridPanel/styles.module.css
@@ -4,8 +4,6 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: var(--horizontalAlign);
-  align-items: var(--verticalAlign);
   background-color: var(--rstudio-white, green);
 }
 
